[package]
name = "falsify"
version = "0.1.3"
edition = "2024"
authors = ["Adam Szkoda <adaszko@gmail.com>"]
description = "Property testing based on coroutines"
homepage = "https://github.com/adaszko/falsify"
repository = "https://github.com/adaszko/falsify"
keywords = ["property", "testing", "quickcheck", "hypothesis", "proptest"]
categories = ["development-tools::testing"]
license = "MIT"
readme = "README.md"

[dependencies]
rand = "0.10.1"
